[package]
name = "mai_presale_native"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
mpl-token-metadata = "4.1.2"
borsh = "0.9.3"
thiserror = "1.0.40"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mai_presale_native"

[package.metadata.cargo-build-sbf]
rust-version = "1.75.0"
